1999-07-20  Per Bothner  <per@bothner.com>

	* Makefile.am, Makefile.in (list-sources):  New rule.

1999-07-19  Per Bothner  <per@bothner.com>

	* trace.scm:  New file.
	* files.scm (system-tmpdir, make-temporary-file):  New procedures.
	* Makefile.am, Makefile.in (java_SCM):  Add trace.scm.

1999-04-22  Per Bothner  <bothner@Magnus.Cygnus.COM>

	* reflection.scm (subtype?):  New procedure.
	* std_syntax.scm (%let-lambda1, %et-init):  Handle :: TYPE specifier.
	(do):  Handle type specifier - but only for one variable.

Wed Apr  7 23:37:10 1999  Per Bothner  <bothner@Magnus.Cygnus.COM>

	* syntax.scm (fluid-let):  Remove; replaced by kawa.standard.fluid_let.

Sun Mar 21 18:14:09 1999  Per Bothner  <bothner@Magnus.Cygnus.COM>

	* emacs.scm:  New, merged from ../../gnu/elisp/streams.scm.
	* Makefile.am (java_SCM):  Add emacs.scm.

Sun Mar  7 17:18:57 1999  Per Bothner  <bothner@Magnus.Cygnus.COM>

	* std_syntax.scm (let):  Handle type specifier for named let.
	(let*):  Generalize to handle named type specifiers.
	(delay):  Promise thunk is now Procedure instead of Proceure0.

Tue Feb  9 11:31:16 1999  Per Bothner  <bothner@Magnus.Cygnus.COM>

	* numbers.scm (sin, cos, tan):  New procedures.
	* misc.scm (symbol->string, string->symbol):  New procedures.

Tue Oct  6 11:24:17 1998  Edouard Parmelan <EP510777@exchange.FRANCE.NCR.com>

	* ports.scm: TtyInPort and Procedure classes move from package
	kawa.lang to gnu.mapping.

Fri Sep 11 22:30:25 1998  Per Bothner  <bothner@cygnus.com>

	* strings.scm (string-ref, string-set!):  Added.
	(substring, string-fill!):  Declare some parameter and result types.
	* vectors.scm (vector-ref, vector-set!):  Declare parameter types.
	* lists.scm (set-car!, set-cdr!):  Added.

1998-08-28  Per Bothner  <bothner@cygnus.com>

	* std_syntax.scm (do):  Use "magic" identifier.
	* syntax.scm (location):  Removed - now in ../standard.

Tue Jul 28 08:31:51 1998  Per Bothner  <bothner@cygnus.com>
