@@ -5,22 +5,22 @@
 (define (rational? x) (instance? x <rational>))
 ;;;(define (integer? x) ...)
 
-(define (zero? x)
+(define (zero? (x <number>))
   ((primitive-virtual-method <number> "isZero" <boolean> ())
    x))
-(define (negative? x)
-  ((primitive-virtual-method <gnu.math.RealNum> "isNegative" <boolean> ())
+(define (negative? (x <real>))
+  ((primitive-virtual-method <real> "isNegative" <boolean> ())
    x))
-(define (odd? x)
-  ((primitive-virtual-method <gnu.math.IntNum> "isOdd" <boolean> ())
+(define (odd? (x <integer>))
+  ((primitive-virtual-method <integer> "isOdd" <boolean> ())
    x))
-(define (even? x)
+(define (even? (x <integer>))
   (not (odd? x)))
 
-(define (abs x)
+(define (abs (x <number>))
   ((primitive-virtual-method <number> "abs" <number> ())
    x))
-(define (quotient x y)
+(define (quotient (x <integer>) (y <integer>))
   ((primitive-static-method <integer> "quotient" <integer>
 			    (<integer> <integer>))
    x y))
@@ -29,14 +29,15 @@
 			    (<integer> <integer>))
    x y))
 
-(define (numerator x)
+(define (numerator (x <integer>) (y <integer>))
   ((primitive-virtual-method <rational> "numerator" <integer> ()) x))
-(define (denominator x)
+
+(define (denominator (x <integer>))
   ((primitive-virtual-method <rational> "denominator" <integer> ()) x))
 
-(define (exp x)
+(define (exp (x <complex>))
   ((primitive-virtual-method <complex> "exp" <complex> ())  x))
-(define (log x)
+(define (log (x <complex>))
   ((primitive-virtual-method <complex> "log" <complex> ())  x))
 
 ;;; These are only implemented for <real> arguments.
@@ -56,23 +57,23 @@
     ((primitive-virtual-method <java.lang.Number> "doubleValue" <double> ())
      x))))
 
-(define (make-rectangular x y)
+(define (make-rectangular (x <real>) (y <real>))
   ((primitive-static-method <complex> "make" <complex> (<real> <real>))  x y))
-(define (make-polar x y)
+(define (make-polar (x <double>) (y <double>))
   ((primitive-static-method <complex> "polar" <gnu.math.DComplex>
 			    (<double> <double>))
    x y))
-(define (real-part x)
+(define (real-part (x <complex>))
   ((primitive-virtual-method <complex> "re" <real> ())  x))
-(define (imag-part x)
+(define (imag-part (x <complex>))
   ((primitive-static-method <quantity> "make" <quantity>
 			    (<complex> <gnu.math.Unit>))
    ((primitive-virtual-method <quantity> "im" <real> ())  x)
    ((primitive-virtual-method <quantity> "unit" <gnu.math.Unit> ()) x)))
-(define (magnitude x)
+(define (magnitude (x <number>))
   ((primitive-virtual-method <number> "abs" <number> ())
    x))
-(define (angle x)
+(define (angle (x <complex>))
   ((primitive-virtual-method <complex> "angle" <real>
  ())
    ((primitive-virtual-method <quantity> "number" <complex> ()) x)))
