@@ -10,52 +10,52 @@
   ((primitive-constructor <string> (<int> <char>))
    n ch))
 
-(define (string-length str)
+(define (string-length (str <string>))
   ((primitive-virtual-method <string> "length" <int> ())
    str))
 
-(define (string-ref string (k <int>))
+(define (string-ref (string <string>) (k <int>))
   ((primitive-virtual-method <string> "charAt" <char> (<int>))
    string k))
 
-(define (string-set! string (k <int>) (char <char>))
+(define (string-set! (string <string>) (k <int>) (char <char>))
   ((primitive-virtual-method <string> "setCharAt" <void> (<int> <char>))
    string k char))
 
-(define (substring str (start <int>) (end <int>))
+(define (substring (str <string>) (start <int>) (end <int>))
   ((primitive-virtual-method <string> "copy" <string> (<int> <int>))
    str start end))
 
-(define (string-copy str)
+(define (string-copy (str <string>))
   ((primitive-virtual-method <string> "copy" <string> ())
    str))
 
-(define (string-fill! str (ch <char>))
+(define (string-fill! (str <string>) (ch <char>))
   ((primitive-virtual-method <string> "fill" <void> (<char>))
    str ch))
 
-(define (string-upcase! str)
+(define (string-upcase! (str <string>))
   ((primitive-virtual-method <string> "makeUpperCase" <void> ())
    str)
   str)
 
-(define (string-downcase! str)
+(define (string-downcase! (str <string>))
   ((primitive-virtual-method <string> "makeLowerCase" <void> ())
    str)
   str)
 
-(define (string-capitalize! str)
+(define (string-capitalize! (str <string>))
   ((primitive-virtual-method <string> "makeCapitalize" <void> ())
    str)
   str)
 
-(define (string-upcase str)
+(define (string-upcase (str <string>))
   (string-upcase! (string-copy str)))
 
-(define (string-downcase str)
+(define (string-downcase (str <string>))
   (string-downcase! (string-copy str)))
 
-(define (string-capitalize str)
+(define (string-capitalize (str <string>))
   (string-capitalize! (string-copy str)))
 
 #|
