@@ -1,3 +1,8 @@
+1999-08-06  Per Bothner  <per@bothner.com>
+
+	* characters.scm, numbers.scm, strings.scm, vectors.scm:  Add many
+ 	specifications of parameter types for better error messages.
+
 1999-07-20  Per Bothner  <per@bothner.com>
 
 	* Makefile.am, Makefile.in (list-sources):  New rule.
